# tc

./: .gitconfig  .gitignore  CMakeLists.txt  LICENSE  MultipleRemotes.txt  Omni-protocol.txt  README.md  conanfile.py  conanfile.txt  tc-telematics-server-omni.ini  tc.code-workspace
asio/data/: PacketEntries.h
conan/: CMakeLists.txt  settings.yml
conan/conans/CppServer/: conandata.yml  conanfile.py
conan/conans/args-parser/: conandata.yml  conanfile.py
conan/conans/asio/: conandata.yml  conanfile.py
conan/conans/cppcommon/: conandata.yml  conanfile.py
conan/conans/cppserver/: CMakeLists.txt  conandata.yml  conanfile.py
conan/conans/fmt/: conandata.yml  conanfile.py
conan/conans/fmt/src/: CMakeLists.txt
conan/conans/fmt/test_package/: CMakeLists.txt  test_package.cpp
conan/conans/jsoncpp/: conandata.yml  conanfile.py
conan/conans/magic_enum/: conandata.yml  conanfile.py
conan/conans/mini/: conandata.yml  conanfile.py
conan/conans/mongo-c-driver/: conanfile.py
conan/conans/mongo-cxx-driver/: CMakeLists.txt  conanfile.py
conan/conans/mongoc/: CMakeLists.txt  Findlibbson-1.0.cmake  Findlibmongoc-1.0.cmake  conandata.yml  conanfile.py
conan/conans/mongocxx/: CMakeLists.txt  conandata.yml  conanfile.py
conan/conans/spdlog/: CMakeLists.txt  conandata.yml  conanfile.py
conan/conans/tc/: conanfile.py
conan/conans/vscode/: conanfile.py
conan/profiles/: default
src/client/: AsioService.h  CMakeLists.txt  CommandFactory.cpp  CommandFactory.h  TelematicsClient.cpp  TelematicsClient.h  telematics-client.cpp
src/client/tcp/: AsioService.h  CommandFactory.cpp  CommandFactory.h  TelematicsClient.cpp  TelematicsClient.h
src/http/server/: CMakeLists.txt  chat_server.cpp
src/http/server/parser/: Packet.cpp  main.cpp
src/http/server/parser/reader/: Buf.cpp  Reader.cpp  Reader.h
src/http/server/parser/records/: ParserI.h  RecordI.h
src/http/server/parser/records/avl/: AVLPacket.h  AVLRecord.cpp  AVLRecord.h  AVLRecordHeader.h  AVLRecordHeaderParser.h
src/http/server/parser/records/gps/: GPSParser.h  GPSRecord.h
src/http/server/parser/records/io/: IoParser.h  RecordIo.h  RecordIoLists.h  RecordIoProperty.h
src/parser/: CMakeLists.txt  Packet.cpp  main.cpp
src/parser/common/: Result.h
src/parser/reader/: Buf.cpp  Reader.cpp
src/parser/records/: ParserI.h  RecordI.h
src/parser/records/avl/: AVLPacket.h  AVLRecord.cpp  AVLRecord.h  AVLRecordHeader.cpp  AVLRecordHeader.h
src/parser/records/gps/: GPSRecord.cpp  GPSRecord.h
src/parser/records/io/: IoRecord.cpp  IoRecord.h
src/server/tcp/: CMakeLists.txt  main.cpp
src/server/tcp/handler/: Session.cpp
src/tc/: CMakeLists.txt  telematics-client.cpp  telematics-server.cpp  vehicle-connector-server.cpp  vehicle-connector.cpp
src/tc/asio/: AsioService.cpp  AsioService.h
src/tc/client/tcp/: AsioService.cpp  AsioService.h  Client.cpp  Client.h  CommandFactory.cpp  CommandFactory.h  TelematicsClient.cpp  TelematicsClient.h
src/tc/common/: Buf.cpp  Buf.h  CMakeLists.txt  CRC16.cpp  CRC16.h  Codec.h  Common.h  Convert.cpp  Convert.h  Logger.cpp  Logger.h  Macros.h  MagicEnum.cpp  MagicEnum.h  Regex.cpp  Regex.h  Result.h  Signal.h  SysMutex.cpp  SysMutex.h  SysTime.cpp  SysTime.h  Types.cpp  Types.h
src/tc/db/: Access.cpp  Access.h  Client.cpp  Client.h  Instance.h  Thread.cpp  Thread.h
src/tc/iot/: Device.cpp  Device.h  Devices.cpp  Devices.h  Vehicle.cpp  Vehicle.h
src/tc/parser/: Buf.cpp  Buf.h  CMakeLists.txt  Command.cpp  Command.h  CommandI.cpp  CommandI.h  Convert.cpp  Convert.h  Handler.cpp  Handler.h  InternalRequest.cpp  InternalRequest.h  Json.cpp  Json.h  Packet.cpp  Packet.h  Protocol.cpp  Protocol.h  Reader.cpp  Reader.h  ReqType.cpp  ReqType.h  Request.cpp  Request.h  RequestI.cpp  RequestI.h  Util.cpp  Util.h  main.cpp
src/tc/parser/internal/: Action.cpp  Action.h  Request.cpp  Request.h
src/tc/parser/omni/: Action.cpp  Action.h  Command.cpp  Command.h  Crc.cpp  Crc.h  Datetime.h  Parser.h
src/tc/parser/omni/packet/: Payload.cpp  Payload.h
src/tc/parser/omni/records/: CheckIn.cpp  CheckIn.h  GPS.h  Heartbeat.cpp  Heartbeat.h  LockReport.cpp  LockReport.h  Positioning.cpp  Positioning.h  RecordI.h  Unlock.cpp  Unlock.h
src/tc/parser/omni/response/: ResponseI.h
src/tc/parser/packet/: Command.cpp  Command.h  InternalRequest.cpp  InternalRequest.h  Packet.cpp  Packet.h  PacketCommand.cpp  PacketCommand.h  PacketPayload.cpp  PacketPayload.h  PacketRequest.cpp  PacketRequest.h
src/tc/parser/reader/: Buf.cpp  Buf.h  Reader.cpp  Reader.h
src/tc/parser/records/: RecordI.h
src/tc/parser/records/avl/: AVLPacket.h  AVLRecord.cpp  AVLRecord.h  AVLRecordHeader.cpp  AVLRecordHeader.h
src/tc/parser/records/gps/: GPSRecord.cpp  GPSRecord.h
src/tc/parser/records/io/: IoRecord.cpp  IoRecord.h  IoRecordProperty.cpp  IoRecordProperty.h
src/tc/parser/teltonika/: Action.cpp  Action.h  Command.cpp  Command.h
src/tc/parser/teltonika/packet/: PacketCommand.cpp  PacketCommand.h  PacketPayload.cpp  PacketPayload.h  Payload.cpp  Payload.h
src/tc/parser/teltonika/records/: RecordI.h
src/tc/parser/teltonika/records/avl/: AVLRecord.cpp  AVLRecord.h  AVLRecordHeader.cpp  AVLRecordHeader.h
src/tc/parser/teltonika/records/gps/: GPSRecord.cpp  GPSRecord.h
src/tc/parser/teltonika/records/io/: IoRecord.cpp  IoRecord.h  IoRecordProperty.cpp  IoRecordProperty.h
src/tc/parser/test/: parser-test.cpp
src/tc/server/: CMakeLists.txt
src/tc/server/asio/: AsioService.h
src/tc/server/http/: Action.cpp  Action.h  Cache.cpp  Cache.h  CacheHandler.cpp  CacheHandler.h  CacheServer.cpp  CacheServer.h  CacheSession.cpp  CacheSession.h  Client.cpp  Client.h  Devices.h  LSync.cpp  LSync.h  Request.cpp  Request.h  RequestFactory.cpp  RequestFactory.h  Sync.cpp  Sync.h  Updater.cpp  Updater.h
tool/ansible/: ansible.cfg  hosts.ini  nc.yml
tool/ansible/group_vars/: all.yml
tool/ansible/host_vars/: wsr.yml
tool/ansible/playbooks/: authorized_keys.yml  ws-ansible.yml
tool/cmake/: rg.cmake  tc.cmake
tools/certificates/: server.pem  snakeoil.csr  snakeoil.key  snakeoil.pem
(+83 files in other folders)
